<resources>
    <string name="app_name">BeerRatingApp</string>
    <string name="add_beer">Add Beer</string>
    <string name="beer_name">Name</string>
    <string name="beer_brew">Brewer</string>
    <string name="search">Search</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="beer_rater">Beer Rater</string>
    <string name="icon_designed">Creative Commons Usage</string>
    <string name="icon_credit">Icon: </string>
    <string name="designed_by">App created by Goutermout Labs</string>

</resources>
